--- a/public/recorder.html
+++ b/public/recorder.html
@@ -14,6 +14,8 @@ body {
   font-size: 28px;
   text-align: center;
   margin-bottom: 8px;
+  color: #1e3a8a; /* 深蓝色 */
+  font-weight: 600;
 }
 #controls { text-align: center; }
 #status { text-align: center; margin: 6px 0; }
