--- a/public/recorder.html
+++ b/public/recorder.html
@@ -1,168 +1,34 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8" />
-<title>Pronunciation</title>
-
-<style>
-body {
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  margin: 10px;
-  color: #111;
-}
-#word {
-  font-size: 28px;
-  text-align: center;
-  margin-bottom: 8px;
-  color: #1e3a8a; /* 深蓝色 */
-  font-weight: 600;
-}
-#controls { text-align: center; }
-#status { text-align: center; margin: 6px 0; }
-#phonemes {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  gap: 4px;
-  margin-top: 14px;
-}
-.phoneme {
-  width: 24px;
-  height: 140px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  cursor: pointer;
-}
-.ph-letters { font-size: 11px; margin-bottom: 2px; }
-.ph-score { font-size: 11px; font-weight: 600; margin-bottom: 2px; }
-.ph-bar-wrap {
-  height: 70px;
-  width: 100%;
-  display: flex;
-  align-items: flex-end;
-  margin-bottom: 4px;
-}
-.ph-bar {
-  width: 100%;
-  background: #3b82f6;
-  border-radius: 3px 3px 0 0;
-}
-.ph-ipa { font-size: 13px; margin-top: 2px; }
-.ph-weak { color: #6b7280; }
-.ph-weak .ph-bar { background: #cbd5e1; }
-</style>
+  <meta charset="UTF-8" />
+  <title>Pronunciation Recorder</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
+  <div id="app">
+    <div id="word"></div>
 
-<div id="word"></div>
+    <div id="controls">
+      <button id="recBtn">🎙 录音</button>
+      <button id="stopBtn" disabled>⏹ 停止并评测</button>
+      <span id="status"></span>
+    </div>
 
-<div id="controls">
-  <button id="rec">🎙 录音</button>
-  <button id="stop">⏹ 停止并评测</button>
-</div>
+    <div id="score"></div>
 
-<div id="status"></div>
-<div id="phonemes"></div>
+    <div id="phoneme-bars" class="bars"></div>
+  </div>
 
-<script>
-/* ====== 从 URL 读取 Word（关键） ====== */
-const params = new URLSearchParams(location.search);
-const WORD = params.get("word") || "";
-document.getElementById("word").innerText = WORD;
+  <div id="tip-overlay" class="hidden">
+    <div id="tip-card">
+      <div id="tip-ipa"></div>
+      <div id="tip-text"></div>
+      <button id="tip-close">关闭</button>
+    </div>
+  </div>
 
-/* ====== 下面逻辑保持不变 ====== */
-let audioCtx, processor, input;
-let chunks = [];
-
-const recBtn = document.getElementById("rec");
-const stopBtn = document.getElementById("stop");
-const status = document.getElementById("status");
-const phonemeBox = document.getElementById("phonemes");
-
-recBtn.onclick = async () => {
-  chunks = [];
-  audioCtx = new AudioContext({ sampleRate: 16000 });
-  const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-  input = audioCtx.createMediaStreamSource(stream);
-  processor = audioCtx.createScriptProcessor(4096, 1, 1);
-  processor.onaudioprocess = e =>
-    chunks.push(new Float32Array(e.inputBuffer.getChannelData(0)));
-  input.connect(processor);
-  processor.connect(audioCtx.destination);
-  status.innerText = "🎙 录音中...";
-};
-
-stopBtn.onclick = async () => {
-  processor.disconnect();
-  input.disconnect();
-
-  let len = chunks.reduce((a, b) => a + b.length, 0);
-  let data = new Float32Array(len);
-  let off = 0;
-  chunks.forEach(c => { data.set(c, off); off += c.length; });
-
-  let start = 0;
-  while (start < data.length && Math.abs(data[start]) < 0.02) start++;
-  data = data.slice(start);
-
-  const wav = floatToWav(data, 16000);
-  const blob = new Blob([wav], { type: "audio/wav" });
-
-  status.innerText = "⏳ 评测中...";
-  phonemeBox.innerHTML = "";
-
-  const fd = new FormData();
-  fd.append("audio", blob);
-  fd.append("word", WORD);
-
-  const r = await fetch("/assess", { method: "POST", body: fd });
-  const j = await r.json();
-
-  status.innerText = "发音分数：" + j.score;
-  renderPhonemes(j.phonemes || []);
-};
-
-function renderPhonemes(list) {
-  phonemeBox.innerHTML = "";
-  list.forEach(p => {
-    const score = Math.round(p.score || 0);
-    const h = Math.max(6, score * 0.6);
-    const el = document.createElement("div");
-    el.className = "phoneme" + (score < 60 ? " ph-weak" : "");
-    el.innerHTML = `
-      <div class="ph-letters">${p.letters || ""}</div>
-      <div class="ph-score">${score}</div>
-      <div class="ph-bar-wrap">
-        <div class="ph-bar" style="height:${h}px"></div>
-      </div>
-      <div class="ph-ipa">${p.ipa}</div>
-    `;
-    el.onclick = () =>
-      new Audio("/audio_phoneme/" + p.ipa + ".mp3").play();
-    phonemeBox.appendChild(el);
-  });
-}
-
-function floatToWav(float32, sr) {
-  const pcm = new Int16Array(float32.length);
-  for (let i = 0; i < float32.length; i++)
-    pcm[i] = Math.max(-1, Math.min(1, float32[i])) * 0x7fff;
-  const b = new ArrayBuffer(44 + pcm.length * 2);
-  const v = new DataView(b);
-  const w = (o, s) => [...s].forEach((c, i) => v.setUint8(o+i,c.charCodeAt(0)));
-  w(0,"RIFF"); v.setUint32(4,36+pcm.length*2,true);
-  w(8,"WAVE"); w(12,"fmt "); v.setUint32(16,16,true);
-  v.setUint16(20,1,true); v.setUint16(22,1,true);
-  v.setUint32(24,sr,true); v.setUint32(28,sr*2,true);
-  v.setUint16(32,2,true); v.setUint16(34,16,true);
-  w(36,"data"); v.setUint32(40,pcm.length*2,true);
-  let p=44; pcm.forEach(s=>{v.setInt16(p,s,true);p+=2});
-  return b;
-}
-</script>
-
+  <script src="phoneme_tips.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
