--- a/public/recorder.html
+++ b/public/recorder.html
@@ -29,6 +29,7 @@
   </div>
 
   <script src="phoneme_tips.js"></script>
+  <script src="phoneme_resolver.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
